feat: add header

--- a/src/app.css
+++ b/src/app.css
@@ -14,5 +14,12 @@
 }
 
 body {
-  @apply text-black dark:text-white;
+  @apply text-black dark:text-white bg-white dark:bg-black;
+}
+
+body {
+  --bg: #fefefe;
+}
+.dark body {
+  --bg: #2b2b2b;
 }
