--- a/src/app.css
+++ b/src/app.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  @apply text-black dark:text-white bg-white dark:bg-black;
+  @apply bg-white text-black dark:bg-black dark:text-white;
 }
 
 body {
